--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   provider: ^6.1.2
   get_storage: ^2.1.1
+  flutter_zoom_drawer: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
